--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,6 +7,8 @@
 modLoader="javafml" #mandatory
 # A version range to match for said mod loader - for regular FML @Mod it will be the forge version
 loaderVersion="[32,)" #mandatory (24 is current forge version)
+# The license for you mod. This is mandatory metadata and allows for easier comprehension of your redistributive properties.
+license="GNU Lesser General Public License v3.0"
 # A URL to refer people to when problems occur with this mod
 issueTrackerURL="https://github.com/tterrag1098/TreeGrowingSimulator2014/issues/" #optional
 # A list of mods - how many allowed here is determined by the individual mod loader
